--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"@fontsource/raleway": "^4.5.0",
 		"@fontsource/roboto": "^4.5.8",
 		"apexcharts": "^3.27.3",
+		"axios": "^1.1.3",
 		"classnames": "2.3.1",
 		"framer-motion": "^4.1.17",
 		"match-sorter": "6.3.0",
