--- a/package.json
+++ b/package.json
@@ -62,7 +62,8 @@
 		"eslint-plugin-prettier": "3.4.0",
 		"gulp": "4.0.2",
 		"gulp-append-prepend": "1.0.9",
-		"prettier": "2.2.1"
+		"prettier": "2.2.1",
+		"tailwindcss": "^3.2.4"
 	},
 	"browserslist": {
 		"production": [
