--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
 		"react-table": "7.7.0",
 		"react-tagsinput": "3.19.0",
 		"stylis": "^4.0.13",
-		"stylis-plugin-rtl": "^2.1.1"
+		"stylis-plugin-rtl": "^2.1.1",
+		"ulid": "^2.3.0"
 	},
 	"resolutions": {
 		"react-error-overlay": "6.0.11"
