--- a/package.json
+++ b/package.json
@@ -23,12 +23,12 @@
 		"moment": "2.29.4",
 		"node-sass": "8.0.0",
 		"nouislider": "15.0.0",
-		"react": "16.14.0",
+		"react": "^16.14.0",
 		"react-apexcharts": "^1.3.9",
 		"react-big-calendar": "0.33.2",
 		"react-bootstrap-sweetalert": "5.2.0",
 		"react-datetime": "3.1.1",
-		"react-dom": "16.14.0",
+		"react-dom": "^16.14.0",
 		"react-github-btn": "^1.2.1",
 		"react-icons": "^4.2.0",
 		"react-jvectormap": "0.0.16",
