--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 		"apexcharts": "^3.27.3",
 		"axios": "^1.1.3",
 		"classnames": "2.3.1",
+		"csvtojson": "^2.0.10",
 		"firebase": "^9.16.0",
 		"framer-motion": "^4.1.17",
 		"match-sorter": "6.3.0",
