--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"moment": "2.29.4",
 		"node-sass": "8.0.0",
 		"nouislider": "15.0.0",
+		"qrcode": "^1.5.3",
 		"react": "^16.14.0",
 		"react-apexcharts": "^1.3.9",
 		"react-big-calendar": "0.33.2",
